v3.0.0/_sources/plugins/applications_health_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.applications_health_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.applications_health_info -- Information module for Applications Health
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.0.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.applications_health_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Applications Health.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-applicationHealth"></div>
                    <b>applicationHealth</b>
                    <a class="ansibleOptionLink" href="#parameter-applicationHealth" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>ApplicationHealth query parameter. Application health category (POOR, FAIR, or GOOD. Optionally use with siteId only).</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-deviceId"></div>
                    <b>deviceId</b>
                    <a class="ansibleOptionLink" href="#parameter-deviceId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>DeviceId query parameter. Assurance device UUID value (Cannot be submitted together with siteId and clientMac).</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-endTime"></div>
                    <b>endTime</b>
                    <a class="ansibleOptionLink" href="#parameter-endTime" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>EndTime query parameter. Ending epoch time in milliseconds of time window.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-limit"></div>
                    <b>limit</b>
                    <a class="ansibleOptionLink" href="#parameter-limit" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Limit query parameter. The max number of application entries in returned data 1, 1000 (optionally used with siteId only).</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-macAddress"></div>
                    <b>macAddress</b>
                    <a class="ansibleOptionLink" href="#parameter-macAddress" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>MacAddress query parameter. Client device&#x27;s MAC address (Cannot be submitted together with siteId and deviceId).</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-offset"></div>
                    <b>offset</b>
                    <a class="ansibleOptionLink" href="#parameter-offset" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Offset query parameter. The offset of the first application in the returned data (optionally used with siteId only).</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-siteId"></div>
                    <b>siteId</b>
                    <a class="ansibleOptionLink" href="#parameter-siteId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>SiteId query parameter. Assurance site UUID value (Cannot be submitted together with deviceId and clientMac).</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-startTime"></div>
                    <b>startTime</b>
                    <a class="ansibleOptionLink" href="#parameter-startTime" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>StartTime query parameter. Starting epoch time in milliseconds of time window.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Applications Health reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Applications Health object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Applications Health
      cisco.dnac.applications_health_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        siteId: string
        deviceId: string
        macAddress: string
        startTime: 0
        endTime: 0
        applicationHealth: string
        offset: 0
        limit: 0
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;version&quot;: &quot;string&quot;,
      &quot;totalCount&quot;: 0,
      &quot;response&quot;: [
        {
          &quot;name&quot;: &quot;string&quot;,
          &quot;health&quot;: {},
          &quot;businessRelevance&quot;: &quot;string&quot;,
          &quot;trafficClass&quot;: &quot;string&quot;,
          &quot;usageBytes&quot;: 0,
          &quot;averageThroughput&quot;: 0,
          &quot;packetLossPercent&quot;: {},
          &quot;networkLatency&quot;: {},
          &quot;jitter&quot;: {},
          &quot;applicationServerLatency&quot;: {},
          &quot;clientNetworkLatency&quot;: {},
          &quot;serverNetworkLatency&quot;: {}
        }
      ]
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

